[package]
name = "nominals"
description = "A crate for formatting nominal indicators in various systems (e.g., roman numerals)"
version = "0.1.0"
edition = "2021"
rust-version = "1.65.0"
categories = ["value-formatting"]
keywords = ["numerals", "roman", "lists", "enumerations"]
readme = "./README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/khonsulabs/nominals"

[features]
default = ["chinese"]
alloc = []
chinese = ["dep:chinese-number", "alloc"]

[dependencies]
chinese-number = { version = "0.7.7", default-features = false, features = [
    "number-to-chinese",
], optional = true }

[lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[lints.clippy]
pedantic = "warn"
module_name_repetitions = "allow"
