[package]
name = "nominals"
description = "A crate for formatting nominal indicators in various systems (e.g., roman numerals)"
version = "0.2.2"
edition = "2021"
rust-version = "1.65.0"
categories = ["value-formatting"]
keywords = ["numerals", "roman", "lists", "enumerations"]
readme = "./README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/khonsulabs/nominals"

[features]
default = ["alloc"]
alloc = []

[lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[dev-dependencies]
unicode-segmentation = "1.10.1"
unicode-width = "0.1.11"
chinese-number = { version = "0.7.7", default-features = false, features = [
    "number-to-chinese",
] }

[lints.clippy]
pedantic = "warn"
module_name_repetitions = "allow"


[package.metadata.docs.rs]
# document all features
all-features = true
# defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]
